fix for not aligned line numbers on landing page
changed css

--- a/css/home.scss
+++ b/css/home.scss
@@ -106,6 +106,7 @@ body.landing{
 			code{
 				font-size: 14px;
 				line-height: 17px;
+				font-family: "JetBrainsMono-Regular";
 			}
 			a{
 				color: inherit;
